# MTGScannerV2

./: .gitignore  CMakeLists.txt  CardDetector.cpp  main.cpp  makefile  testImageDetection.sh
docs/: CardRecognitionSystemDiagrams.vpp  CardRecognitionSystemDiagrams.vpp.working  CardRecognitionSystemDiagrams.vpp~1  CardRecognitionSystemDiagrams.vux
src/: CRS_Pipeline.cpp  CRS_Pipeline.h  CRS_PipelineBuffer.cpp  CRS_PipelineBuffer.h  CRS_PipelineLoad.cpp  CRS_PipelineLoad.h  CRS_PipelineStage.cpp  CRS_PipelineStage.h  CRS_PipelineWorkload.cpp  CRS_PipelineWorkload.h  CRS_Pipeline_CardDetectorStage.cpp  CRS_Pipeline_CardDetectorStage.h  CRS_Pipeline_CardNameExtractorStage.cpp  CRS_Pipeline_CardNameExtractorStage.h  CRS_Pipeline_Controller.cpp  CRS_Pipeline_Controller.h  CRS_Pipeline_DataBuffer.cpp  CRS_Pipeline_DataBuffer.h  CRS_Pipeline_MultiverseIDResolverStage.cpp  CRS_Pipeline_MultiverseIDResolverStage.h  CRS_Pipeline_ROIExtractorStage.cpp  CRS_Pipeline_ROIExtractorStage.h  CRS_Pipeline_SetNameExtractorStage.cpp  CRS_Pipeline_SetNameExtractorStage.h  CRS_Pipeline_Stage.cpp  CRS_Pipeline_Stage.h  CardDataBase.cpp  CardDataBase.h  CardDetector.cpp  CardDetector.h  CardName_Extractor.cpp  CardRepositoryController.cpp  CardRepositoryController.h  MTGCardRecognitionSystem.cpp  RoI_Extractor.cpp  RoI_Extractor.h  SetName_Extractor.cpp  SetName_Extractor.h
src/Pipeline/: CRSPipeline_Controller.cpp  CRSPipeline_Controller.h  CRSPipeline_DataBuffer.cpp  CRSPipeline_DataBuffer.h  CRSPipeline_Stage.cpp  CRSPipeline_Stage.h  CardDetectorStage.cpp  CardDetectorStage.h  CardNameExtractorStage.cpp  CardNameExtractorStage.h  MultiverseIDResolverStage.cpp  MultiverseIDResolverStage.h  ROIExtractorStage.cpp  ROIExtractorStage.h  SetNameExtractorStage.cpp  SetNameExtractorStage.h
